# thefox

./: .dockerignore  .env.example  .firebaserc  .gitignore  CATEGORIES-SYSTEM.md  DEPLOYMENT.md  Dockerfile  EXPO-GUIDE.md  FIREBASE-CONFIGURATION.md  FIREBASE-FUNCTIONS.md  FIREBASE-INTEGRATION-COMPLETE.md  FIREBASE-INTEGRATION.md  FIREBASE-SETUP-COMPLETE.md  FIREBASE-STORAGE.md  FIRESTORE-DATABASE.md  GIT-DEPLOY-CHEATSHEET.md  HYBRID-ARCHITECTURE.md  PRODUCT.md  PWA-GUIDE.md  QUICK-START.md  README.md  SETUP-COMPLETE.md  alerts.sh  app.json  backup.sh  ci-cd.sh  cloudbuild.yaml  dashboard.html  dashboard.sh  deploy.sh  docker-compose.kvm-shared.yml  docker-compose.yml  env.example  env.sh  eslint.config.js  firebase-applet-config.json  firebase-blueprint.json  firebase.json  firestore.indexes.json  firestore.rules  (+24 more)
.firebase/: hosting.YXBwcy93ZWIvLm5leHQ.cache  hosting.YXBwcy93ZWIvcHVibGlj.cache
ai-services/: README.md  ai-service.js  business-intelligence.js  chatbot.js  package.json  recommendation-engine.js
app/: _layout.tsx  index.tsx
backend/: Cargo.toml  README.md
backend/migrations/: 0001_init.sql  0002_fix_vendor_users.sql
backend/src/: main.rs
deploy/: thefox.app.env.example
docker-config/: nginx.conf  start.sh  supervisord.conf
docs/: architecture-roadmap.md  blueprint.md  kvm-shared-instances.md  production-migration.md  vps-kvm1-thefox-app.md
functions/: eslint.config.js  package-lock.json  package.json  tsconfig.json
microservices/: README.md  check-status.sh  database-optimization.yml  database-test.sh  deploy.sh  docker-compose.yml  (+9 more)
(+1005 files in other folders)
