[package]
name = "thefox-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "time", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde-well-known"] }
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
base64 = "0.22"


